public/css/styles.css
/* ... */
/* pilih loket */
.loket-lokasi {
    background-color: #FFFFFF;
    width: 100%;
    /* height: 45vh; */
    padding: 5%;
    border-radius: 30px;
    box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.25);
    overflow: hidden;
    margin-bottom: 5vh;
}

.keterangan-loket {
    padding-left: 5%;
}

.keterangan-loket h1 {
    font-size: 1rem;
    color: #2B2844;
    font-weight: bold;
}

.keterangan-loket p {
    color: #73848C;
    font-size: 0.8rem;
}

.keterangan-loket p span {
    color: #2B2844;
    font-weight: bold;
    font-size: 0.8rem;
}

.keterangan-loket .badge {
    border-radius: 10px;
    color: #FFFFFF;
}

.open {
    background-color: #53D383;
}

.closed {
    background-color: #FF4D4D;
}



.tombol-ambil-antrian {
    background-color: #4dafff;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: .9rem;
    padding: 5px 60px;
    text-decoration: none;
    border: none;
    width: 100%;
}

.tombol-ambil-antrian:hover {
    background-color: #6eb8f0;
}

.tombol-ambil-antrian:active {
    position: relative;
    top: 2px;
}


.covid-case {
    background-color: #2F2D65;
    border-radius: 15px;
    padding: 0 2%;
    /* padding: 2%; */
    width: 90%;
}

.covid-case p {
    color: #000000;
    padding: 1%;
    /* font-weight: bold; */
}

.covid-case span {
    height: 50%;
    border-radius: 15px;
    background-color: #FFFFFF;
    color: #000000;
}

/* modal ambil nomor antrian */
.modal-body-loket {
    background-color: #2B2844;
    color: #FFFFFF;
    min-height: 70vh;
    max-height: 100vh;
    padding-bottom: 5%;
}

.modal-body-loket h1 {
    font-size: 4rem;
    font-weight: bold;
    color: #4DB0FF;
}

#tombol-detail-antrian {
    background-color: #4dafff;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: 18px;
    padding: 5px 60px;
    text-decoration: none;
    border: none;
    width: 80%;
}

#tombol-detail-antrian:hover {
    background-color: #6eb8f0;
}

#tombol-detail-antrian:active {
    position: relative;
    top: 2px;
}

/* halaman antrianku */
.buat-antrianmu-jumbotron {
    background-color: #2B2844;
    width: 100%;
    height: 20vh;
    padding: 2%;
    border-radius: 30px;
    box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.25);
}

.content-buat-antrianmu-jumbotron {
    width: 100%;
    height: 100%;
}

.word-buat-antrianmu-jumbotron h1 {
    font-size: .9rem;
    font-weight: bold;
    color: #FFFFFF;
}

.word-buat-antrianmu-jumbotron p {
    font-size: .6rem;
    font-weight: 300;
    color: #D5D4DB;
}

.content-buat-antrianmu-jumbotron img {
    width: 150px;
}

#tombol-buat-antrianku {
    background-color: #4dafff;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: .7rem;
    padding: 5px 40px;
    text-decoration: none;
    border: none;
}

#tombol-buat-antrianku:hover {
    background-color: #6eb8f0;
}

#tombol-buat-antrianku:active {
    position: relative;
    top: 2px;
}

.field-lokasi-all-antrianku {
    background-color: #FFFFFF;
    width: 100%;
    /* height: 80vh; */
    padding: 1%;
    border-radius: 30px;
    box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.25);
    overflow: auto;
}

.keterangan-loket-antrianku {
    padding-left: 5%;
    width: 100%;
}

.keterangan-loket-antrianku h1 {
    font-size: .7rem;
    color: #2B2844;
    font-weight: bold;
}

.keterangan-loket-antrianku p {
    color: #73848C;
    font-size: .5rem;
}

.keterangan-loket-antrianku p span {
    color: #2B2844;
    font-weight: bold;
    font-size: 0.8vw;
}

#right-arrow {
    font-size: 1.5rem;
    transition: all 0.1s;
    color: #4DB0FF;
}

/* halaman riwayat */
.tombol-ambil-batal-antrian {
    background-color: #FF4D4D;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: .6rem;
    padding: 5px 10px;
    text-decoration: none;
    border: none;
    width: 60%;
}

.tombol-ambil-batal-antrian:hover {
    background-color: #cf2e2e;
}

.tombol-ambil-batal-antrian:active {
    position: relative;
    top: 2px;
}

.nomor-antrian {
    width: 35%;
    text-align: center;
}

.nomor-antrian p {
    font-size: .6rem;
    color: #2B2844;
    font-weight: bold;
}

.nomor-antrian h1 {
    font-size: 1.2rem;
    color: #4DB0FF;
    font-weight: bold;
}

.no-antrian-terakhir,
.nomor-antrian-mu {
    padding: 1rem;
    border: 1px solid rgba(0, 0, 0, .2);
    border-radius: 15px;
    box-shadow: 0px 10px 16px 0px rgb(0 0 0 / 10%);
    width: 100%;
}

.keterangan-loket-riwayat {
    padding-left: 5%;
    width: 100%;
}

.keterangan-loket-riwayat h1 {
    font-size: .7rem;
    color: #2B2844;
    font-weight: bold;
}

.keterangan-loket-riwayat p {
    color: #73848C;
    font-size: .5rem;
}

.keterangan-loket-riwayat p span {
    color: #2B2844;
    font-weight: bold;
    font-size: .6rem;
}

/* Halaman atur loket */

.tombol-buka-loket {
    background-color: #53D383;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: .8rem;
    padding: 5px 20px;
    text-decoration: none;
    border: none;
    width: 100%;
}

.tombol-buka-loket:hover {
    background-color: #47b471;
}

.tombol-buka-loket:active {
    position: relative;
    top: 2px;
}

.tombol-tutup-loket {
    background-color: #FF4D4D;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: .8rem;
    padding: 5px 20px;
    text-decoration: none;
    border: none;
    width: 100%;
}

.tombol-tutup-loket:hover {
    background-color: #cf2e2e;
}

.tombol-tutup-loket:active {
    position: relative;
    top: 2px;
}

.keterangan-loket-pemilik {
    padding-left: 5%;
    width: 100%;
}

.keterangan-loket-pemilik h1 {
    font-size: 1rem;
    color: #2B2844;
    font-weight: bold;
}

.keterangan-loket-pemilik p {
    color: #73848C;
    font-size: 0.8rem;
}
/* ... */

